RuntimeDokimos aspects woven into mobservice, pending hibernate logging

--- a/mobservice/src/main/resources/application.properties
+++ b/mobservice/src/main/resources/application.properties
@@ -5,7 +5,7 @@ jdbc.password = itB4wQwWH3uvIokIIaoZ2t9ih7
 hibernate.c3p0.min_size=5
 hibernate.c3p0.max_size=20
 hibernate.c3p0.timeout=1800
-hibernate.show_sql = true
-hibernate.format_sql = true
+hibernate.show_sql = false
+hibernate.format_sql = false
 hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
