--- a/RuntimeDokimos/pom.xml
+++ b/RuntimeDokimos/pom.xml
@@ -13,6 +13,11 @@
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjrt</artifactId>
         </dependency>
+        		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.4</version>
+		</dependency>
     </dependencies>
 
     <build>
